argocd/apps/apple-app/apple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  replicas: 5
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
      - name: apple-app
        image: hashicorp/http-echo
        args:
          - "-text=apple"
---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
  # annotations:
    # external-dns.alpha.kubernetes.io/hostname: apple.nonprod.pod7.tf
spec:
  # type: LoadBalancer
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image	
# ---

# kind: Pod
# apiVersion: v1
# metadata:
#   name: apple-app
#   labels:
#     app: apple
# spec:
#   containers:
#     - name: apple-app
#       image: hashicorp/http-echo
#       args:
#         - "-text=apple"
